@startuml
title Calculadora de Orçamento de Aluguel — Visão Geral

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam backgroundColor #FEFEFE

package "Modelo" {
  abstract class Imovel {
    - quartos : int
    - vagas : int
    + calcularAluguelBase() : double
    + calcularAcrescimos() : double
  }

  class Apartamento {
    - VALOR_BASE : double = 700.0
    - ACRESCIMO_DOIS_QUARTOS : double = 200.0
    - DESCONTO_SEM_FILHOS : double = 0.05
    + calcularAluguelBase() : double
  }

  class Casa {
    - VALOR_BASE : double = 900.0
    - ACRESCIMO_DOIS_QUARTOS : double = 250.0
    + calcularAluguelBase() : double
  }

  class Estudio {
    - VALOR_BASE : double = 1200.0
    - GARAGEM_DUAS_VAGAS : double = 250.0
    - GARAGEM_EXTRA : double = 60.0
    + calcularAluguelBase() : double
    + calcularGaragem() : double
  }
}

package "Orçamento" {
  class Orcamento {
    - imovel : Imovel
    - temFilhos : boolean
    - parcelasContrato : int
    + calcularTotal() : double
    + gerarCSV() : void
    + exibirResumo() : void
  }
}

package "Saída" {
  class GeradorCSV {
    + exportar(parcelas : List, caminho : String) : void
  }
}

package "Constantes" {
  class TabelaPreco {
    - APARTAMENTO_BASE : double = 700.0
    - CASA_BASE : double = 900.0
    - ESTUDIO_BASE : double = 1200.0
    - GARAGEM_CASA_AP : double = 300.0
    - DESCONTO_SEM_FILHOS : double = 0.05
    - TAXA_CONTRATO : double = 2000.0
  }
}

Orcamento --> Imovel : utiliza
Orcamento --> GeradorCSV : exporta
Orcamento --> TabelaPreco : consulta
Apartamento ..|> Imovel
Casa ..|> Imovel
Estudio ..|> Imovel

@enduml